--- a/index.html
+++ b/index.html
@@ -8,13 +8,118 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/9817cf6728.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="img/LogoEscapeMadryn.ico">
-    <title>Escape Room Madryn</title>
+    <link rel="icon" type="image/x-icon" href="img/Logo-vector.ico">
+    <title>Estudio Holm. Saad & Asociados</title>
 </head>
 <body>
-   
-  <main></main>
-  <footer></footer>
-   
+  <header class="container my-5">
+		<div class="nav row g-0 justify-content-between rounded-top">
+			<!-- Logotipo -->
+			<div class="logo col-12 col-lg-auto d-flex align-items-center justify-content-center ps-4">
+				<h2 class="fw-bold text-uppercase mb-0">Estudio Holm. Saad & Asociados</h2>					
+			</div>
+
+			<!-- Enlaces -->
+			<nav class="menu col-12 col-lg-auto d-flex align-items-stretch">
+				<a href="#" class="c1 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+					<div class="w-100">
+						<span>Nosotras</span>
+						<div class="icono">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-briefcase-fill" viewBox="0 0 16 16">
+								<path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85v5.65z"/>
+							</svg>
+						</div>
+					</div>
+				</a>
+				<a href="#" class="c2 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+					<div class="w-100">
+						<span>Nuestra Marca</span>
+						<div class="icono">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+								<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+							</svg>
+						</div>
+					</div>
+				</a>
+				<a href="#" class="c3 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+					<div class="w-100">
+						<span>Nuestros Servicios</span>
+						<div class="icono">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+								<path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+							</svg>
+						</div>
+					</div>
+				</a>
+        <a href="#" class="c4 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+					<div class="w-100">
+						<span>Nuestro Sello</span>
+						<div class="icono">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+								<path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+							</svg>
+						</div>
+					</div>
+				</a>
+        <a href="#" class="c5 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+					<div class="w-100">
+						<span>Contactanos</span>
+						<div class="icono">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+								<path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+							</svg>
+						</div>
+					</div>
+				</a>
+			</nav>      
+		</div>   
+		<div class="row mt-5 galeria justify-content-center portafolio ">
+			<div class="contenedor-imagen mb-4 col-6 col-lg-4 ">			
+            <div>
+							<img  class="d-block w-100" src="./img/Logo_vector.png" alt="...">
+						</div>		
+		</div>		
+	</header>
+  <main class="container my-5 mt-5">
+      <!-- Acerca de -->
+			<div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
+				<div class="col-12 col-lg-4 foto text-center">
+					<img src="img/foto.jpg" class="rounded-circle mb-3" alt="">				
+				</div>
+        <div class="col-12 col-lg-8 info">
+					<h1 class="titulo text-center text-lg-start">Nosotras</h1>
+					<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>					
+          <p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovacion.</p>		
+					<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes  y ofrecer no solo 
+            un asesoramiento de calidad, sino una experiencia.</p>            
+       </div>
+			</div>
+      <div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
+				
+        <div class="col-12 col-lg-8 info">					
+					<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>					
+          <p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovacion.</p>		
+					<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes  y ofrecer no solo 
+            un asesoramiento de calidad, sino una experiencia.</p>            
+       </div>
+       <div class="col-12 col-lg-4 foto text-center">
+        <img src="img/foto.jpg" class="rounded-circle mb-3" alt="">	
+        <p class="nombre">Marianela Holm</p>			
+      </div>
+			</div>
+      <div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
+				<div class="col-12 col-lg-4 foto text-center">
+					<img src="img/foto.jpg" class="rounded-circle mb-3" alt="">	
+          <p class="nombre">Lucila Saad</p>			
+				</div>
+        <div class="col-12 col-lg-8 info">					
+					<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>					
+          <p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovacion.</p>		
+					<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes  y ofrecer no solo 
+            un asesoramiento de calidad, sino una experiencia.</p>            
+       </div>
+			</div>
+  </main> 
 </body>
 </html>
