--- a/index.html
+++ b/index.html
@@ -96,28 +96,37 @@
        </div>
 			</div>
       <div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
-				
+        <div class="col-12 col-lg-4 foto text-center">
+          <img src="img/maru_mediano.jpg" class="rounded-circle mb-3" alt="">	
+          <p class="nombre">Marianela Holm</p>			
+        </div>
         <div class="col-12 col-lg-8 info">					
-					<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>					
-          <p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovacion.</p>		
-					<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes  y ofrecer no solo 
-            un asesoramiento de calidad, sino una experiencia.</p>            
+					<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la Patagonia San Juan Bosco sede Puerto Madryn Chubut</p>					
+          <p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y participante del posgrado en Derecho Aduanero de la UBA.</p>					
+          <p class="resumen">Miembro del Instituto Iberoamericano de Derecho Marítimo rama Argentina.</p>					
+          <p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la Ciudad Autónoma de Buenos Aires.</p>					          
+          <p class="resumen">Co- fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>	
        </div>
-       <div class="col-12 col-lg-4 foto text-center">
-        <img src="img/foto.jpg" class="rounded-circle mb-3" alt="">	
-        <p class="nombre">Marianela Holm</p>			
-      </div>
+      
 			</div>
       <div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
-				<div class="col-12 col-lg-4 foto text-center">
-					<img src="img/foto.jpg" class="rounded-circle mb-3" alt="">	
+				<div class="col-12 col-lg-4 foto text-center gap-3">
+					<img src="img/lucila_mediano.jpg" class="rounded-circle mb-3" alt="">	
           <p class="nombre">Lucila Saad</p>			
 				</div>
         <div class="col-12 col-lg-8 info">					
-					<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>					
-          <p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovacion.</p>		
-					<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes  y ofrecer no solo 
-            un asesoramiento de calidad, sino una experiencia.</p>            
+					<p class="resumen">Mi nombre es Lucila Saad y soy Contadora Pública egresada de la UBA.</p>					
+          <p class="resumen">Vivo en la ciudad de Puerto Madryn, Chubut.</p>		
+          <p class="resumen">Mi labor profesional me brindó la posibilidad de
+            desempeñarme en el Area de Administración, Finanzas
+            y RRHH en empresas multinacionales de servicios de
+            Forwarding y de adquirir una amplia experiencia en            
+            materia de Comercio Exterior .</p>		
+          <p class="resumen">Actualmente me desempeño asesorando a particulares y
+            empresas, ofreciendo soluciones tributarias, contables, de RRHH y de COMEX.</p>		
+          <p class="resumen">Co- fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>							
+          <p class="resumen">Contadora Pública.</p>							
+          <p class="resumen">Docente PDS UTN .</p>							
        </div>
 			</div>
   </main> 
