--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Estudio Holm. Saad & Asociados</title>
 </head>
 <body>
-  <header class="container my-5">
+  <header class="container  my-5">
 		<div class="nav row g-0 justify-content-between  rounded-top">
 			<!-- Logotipo -->
 			<div class="logo col-12 col-md-12 col-lg-4 d-flex align-items-center justify-content-center ps-4">
@@ -20,7 +20,7 @@
 			</div>
 
 			<!-- Enlaces -->
-			<nav class="menu col-12 col-md-12 col-lg-8 col-xl-auto d-flex align-items-stretch">
+			<nav class="menu d-flex  justify-content-center align-items-stretch col-12 col-md-12 col-lg-8 col-xl-auto ">
 				<a href="#" class="c1 px-4 d-flex align-items-center text-center text-white text-decoration-none">
 					<div class="w-100">
 						<span>Nosotras</span>
@@ -34,7 +34,7 @@
 				</a>
 				<a href="#" class="c2 px-4 d-flex align-items-center text-center text-white text-decoration-none">
 					<div class="w-100">
-						<span>Nuestra Marca</span>
+						<span >Nuestra Marca</span>
 						<div class="icono">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
 								<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
