--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			</div>
 
 			<!-- Enlaces -->
-			<nav class="menu d-flex  justify-content-center align-items-stretch col-12 col-md-12 col-lg-8 col-xl-auto ">
-				<a href="#" class="c1 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+			<nav class="menu  d-lg-flex  justify-content-center align-items-stretch col-12 col-md-12 col-lg-8 col-xl-auto ">
+				<a href="#" class="c1 px-4 d-flex align-items-center  text-center text-white text-decoration-none">
 					<div class="w-100">
 						<span>Nosotras</span>
 						<div class="icono">
