Se agrega mas servicios

--- a/index.html
+++ b/index.html
@@ -397,6 +397,8 @@
 						data-bs-parent="#temario"
 					>
 						<div class="accordion-body">
+							<p>Asesoramiento Integral a Capitanes y Armadores.</p>
+							<p>Defensas ante la Prefectura Naval Argentina.</p>
 							<p>Liquidación de sueldos, jornales y cargas sociales.</p>
 							<p>Confección y presentación de declaraciones juradas y boletas de sindicatos..</p>
 							<p>Emisión de recibos de haberes y registración en libro sueldos. Libro de Sueldos Digital..</p>
@@ -443,6 +445,72 @@
 							<p>Relevamiento de activos y pasivos externos BCRA Com. 6401.</p>
 							<p>Registro de información cambiaria de importadores y exportadores de bienes.</p>
 							<p>F4501 Precios de transferencia. Confección y presentación.</p>
+						</div>
+					</div>
+				</div>
+				<!-- Elemento #6 -->
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="encabezado-6">
+						<button
+							class="accordion-button"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#elemento-6"
+							aria-expanded="true"
+							aria-controles="elemento-6"
+						>
+						ASESORAMIENTO EN TRANSPORTE MARÍTIMO
+						</button>
+					</h2>
+
+					<div
+						id="elemento-6"
+						class="accordion-collapse collapse"
+						aria-labelledby="encabezado-6"
+						data-bs-parent="#temario"
+					>
+						<div class="accordion-body">
+							<p>Asesoramiento integral por remoción, extracción, traslado, desguace o demolición de Buques y artefactos navales náufragos.</p>
+							<p>Repetición de los gastos por daños a instalaciones portuarias.</p>
+							<p>Locación y/o compraventa de buques.</p>
+							<p>Contratos de fletamento.</p>
+							<p>Transporte de carga en general.</p>
+							<p>Contrato de Remolque.</p>
+							<p>Abordajes.</p>
+							<p>Asistencia y salvamento.</p>
+							<p>Averías gruesas.</p>
+							<p>Seguros de intereses vinculados al buque.</p>
+							<p>Seguros de intereses vinculados a los efectos.</p>
+							<p>Asesoramiento integral de otros Seguros conexos con la navegación</p>
+						</div>
+					</div>
+				</div>
+				<!-- Elemento #7 -->
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="encabezado-7">
+						<button
+							class="accordion-button"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#elemento-7"
+							aria-expanded="true"
+							aria-controles="elemento-7"
+						>
+						ADUANERO Y COMEX
+						</button>
+					</h2>
+
+					<div
+						id="elemento-7"
+						class="accordion-collapse collapse"
+						aria-labelledby="encabezado-7"
+						data-bs-parent="#temario"
+					>
+						<div class="accordion-body">
+							<p>Defensa en procedimientos contenciosos en sede administrativa y judicial.</p>
+							<p>Repetición de tributos aduaneros.</p>
+							<p>Gestiones ante diferentes Organismos del Estado Nacional.</p>						
+							<p>Asesoramiento integral de INCOTERMS.</p>
 						</div>
 					</div>
 				</div>
