Se agrega cambios de servicios

--- a/index.html
+++ b/index.html
@@ -279,23 +279,67 @@
 				<h1 class="text-center">Nuestros Servicios</h1>
 			</div>
 			<div class="col-12">
-				<div class="accordion accordion-flush mb-5" id="temario">
+				<div class="accordion accordion-flush mb-5" id="temario">					
 					<!-- Elemento #1 -->
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="encabezado-1">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-1" aria-expanded="true" aria-controles="elemento-1">
-								ASESORAMIENTO SOCIETARIO
+								ASESORAMIENTO EN TRANSPORTE MARTIMO 
 							</button>
 						</h2>
 
 						<div id="elemento-1" class="accordion-collapse collapse show" aria-labelledby="encabezado-1"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
-								<p>Constitución y organización de Sociedades (S.A., S.R.L., Simples Asociaciones, etc.).
+								<p>Asesoramiento integral por remoción, extracción, traslado, desguace o demolición de Buques y artefactos navales náufragos.
 								</p>
-								<p>Determinación del encuadre societario apropiado para su empresa.</p>
-								<p>Relevamiento de información y asesoramiento en la redacción de contrato.</p>
+								<p>Repetición de los gastos por daños a instalaciones portuarias.</p>
+								<p>Locación y/o compraventa de buques.</p>
+								<p>Contratos de fletamento.</p>
+								<p>Transporte de carga en general.</p>
+								<p>Contrato de Remolque.</p>
+								<p>Abordajes.</p>
+								<p>Asistencia y salvamento.</p>
+								<p>Averías gruesas.</p>
+								<p>Seguros de intereses vinculados al buque.</p>
+								<p>Seguros de intereses vinculados a los efectos.</p>
+								<p>Asesoramiento integral de otros Seguros conexos con la navegación.</p>								
+							</div>
+						</div>
+					</div>
+					<!-- Elemento #2 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="encabezado-2">
+							<button class="accordion-button" type="button" data-bs-toggle="collapse"
+								data-bs-target="#elemento-2" aria-expanded="true" aria-controles="elemento-2">
+								ADUANERO Y COMEX
+							</button>
+						</h2>
+
+						<div id="elemento-2" class="accordion-collapse collapse" aria-labelledby="encabezado-2"
+							data-bs-parent="#temario">
+							<div class="accordion-body">
+								<p>Defensa en procedimientos contenciosos en sede administrativa y judicial.</p>
+								<p>Repetición de tributos aduaneros.</p>
+								<p>Gestiones ante diferentes Organismos del Estado Nacional.</p>
+								<p>Asesoramiento integral de INCOTERMS.</p>
+							</div>
+						</div>
+					</div>
+					<!-- Elemento #3 -->
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="encabezado-3">
+							<button class="accordion-button" type="button" data-bs-toggle="collapse"
+								data-bs-target="#elemento-3" aria-expanded="true" aria-controles="elemento-3">
+								ASESORAMIENTO SOCIETARIO
+							</button>
+						</h2>
+
+						<div id="elemento-3" class="accordion-collapse collapse show" aria-labelledby="encabezado-3"
+							data-bs-parent="#temario">
+							<div class="accordion-body">
+								<p>Constitución y organización de Sociedades.</p>								
 								<p>Asesoramiento en la inscripción (presentación de documentación, contestación de
 									vistas, informes precalificatorios, publicación de edictos, pago de tasas
 									retributivas, etc.).</p>
@@ -314,43 +358,39 @@
 							</div>
 						</div>
 					</div>
-
-					<!-- Elemento #2 -->
+					<!-- Elemento #4 -->
 					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-2">
+						<h2 class="accordion-header" id="encabezado-4">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-2" aria-expanded="true" aria-controles="elemento-2">
+								data-bs-target="#elemento-4" aria-expanded="true" aria-controles="elemento-4">
 								ASESORAMIENTO CONTABLE
 							</button>
 						</h2>
 
-						<div id="elemento-2" class="accordion-collapse collapse" aria-labelledby="encabezado-2"
+						<div id="elemento-4" class="accordion-collapse collapse" aria-labelledby="encabezado-4"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Elaboración de Plan de Cuentas y Registraciones Contables.</p>
 								<p>Preparación y Armado de Estados Contables mensuales y anuales.</p>
 								<p>Asesoramiento en la Confección de Actas e Informes Especiales.</p>
 								<p>Análisis y proyección de estados contables, presupuestos o costos.</p>
-								<p>Organización contable de todo tipo de entes.</p>
-								<p>Elaboración e implementación de políticas, métodos, sistemas y procedimientos
-									administrativo-contables.</p>
+								<p>Organización contable de todo tipo de entes.</p>								
 								<p>Certificaciones e informes contables. Manifestación de bienes, certificación de
 									ingresos, | de Origen de Fondos, otras certificaciones especiales.</p>
-								<p>Auditoría de Estados Contables Anuales (entes sin fines de lucro, asociaciones
-									civiles, cooperadoras, etc).</p>
+								<p>Auditoría de Estados Contables Anuales.</p>
 							</div>
 						</div>
 					</div>
-					<!-- Elemento #3 -->
+					<!-- Elemento #5 -->
 					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-3">
+						<h2 class="accordion-header" id="encabezado-5">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-3" aria-expanded="true" aria-controles="elemento-3">
+								data-bs-target="#elemento-5" aria-expanded="true" aria-controles="elemento-5">
 								ASESORAMIENTO IMPOSITIVO
 							</button>
 						</h2>
 
-						<div id="elemento-3" class="accordion-collapse collapse" aria-labelledby="encabezado-3"
+						<div id="elemento-5" class="accordion-collapse collapse" aria-labelledby="encabezado-5"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Liquidación mensual y anual de tributos nacionales, provinciales y municipales.</p>
@@ -374,9 +414,8 @@
 								<p>Inscripciones y trámites ante organismos nacionales y provinciales.</p>
 								<p>Altas y bajas de Impuestos, solicitud CUIT, encuadramiento de actividad económica,
 									etc.</p>
-								<p>Empadronamiento y Recategorización de Autónomos.</p>
-								<p>Alta de Controladores Fiscales, Bajas y Cambio de Memorias.</p>
-								<p>Gestión de Formularios CETA, Formularios COTI.</p>
+								<p>Recategorización de Autónomos.</p>
+								<p>Alta de Controladores Fiscales, Bajas y Cambio de Memorias.</p>								
 								<p>Asesoramiento al cliente en la atención de inspecciones y requerimientos, seguimiento
 									de las actuaciones.</p>
 								<p>Preparación y confección de moratorias o planes de facilidades de pago,
@@ -384,16 +423,16 @@
 							</div>
 						</div>
 					</div>
-					<!-- Elemento #4 -->
+					<!-- Elemento #6 -->
 					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-4">
+						<h2 class="accordion-header" id="encabezado-6">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-4" aria-expanded="true" aria-controles="elemento-4">
+								data-bs-target="#elemento-6" aria-expanded="true" aria-controles="elemento-6">
 								ASESORAMIENTO LABORAL Y PREVISIONAL
 							</button>
 						</h2>
 
-						<div id="elemento-4" class="accordion-collapse collapse" aria-labelledby="encabezado-4"
+						<div id="elemento-6" class="accordion-collapse collapse" aria-labelledby="encabezado-6"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Asesoramiento Integral a Capitanes y Armadores.</p>
@@ -421,74 +460,8 @@
 								<p>Confección del Formulario F1357 Empleador, F572 web empleado.</p>
 							</div>
 						</div>
-					</div>
-					<!-- Elemento #5 -->
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-5">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-5" aria-expanded="true" aria-controles="elemento-5">
-								ASESORAMIENTO EN COMERCIO EXTERIOR
-							</button>
-						</h2>
-
-						<div id="elemento-5" class="accordion-collapse collapse" aria-labelledby="encabezado-5"
-							data-bs-parent="#temario">
-							<div class="accordion-body">
-								<p>Asesoramiento para Pymes.</p>
-								<p>Registro de importadores y exportadores. RG AFIP 2220 y modif.</p>
-								<p>Relevamiento de activos y pasivos externos BCRA Com. 6401.</p>
-								<p>Registro de información cambiaria de importadores y exportadores de bienes.</p>
-								<p>F4501 Precios de transferencia. Confección y presentación.</p>
-							</div>
-						</div>
-					</div>
-					<!-- Elemento #6 -->
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-6">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-6" aria-expanded="true" aria-controles="elemento-6">
-								ASESORAMIENTO EN TRANSPORTE MARÍTIMO
-							</button>
-						</h2>
-
-						<div id="elemento-6" class="accordion-collapse collapse" aria-labelledby="encabezado-6"
-							data-bs-parent="#temario">
-							<div class="accordion-body">
-								<p>Asesoramiento integral por remoción, extracción, traslado, desguace o demolición de
-									Buques y artefactos navales náufragos.</p>
-								<p>Repetición de los gastos por daños a instalaciones portuarias.</p>
-								<p>Locación y/o compraventa de buques.</p>
-								<p>Contratos de fletamento.</p>
-								<p>Transporte de carga en general.</p>
-								<p>Contrato de Remolque.</p>
-								<p>Abordajes.</p>
-								<p>Asistencia y salvamento.</p>
-								<p>Averías gruesas.</p>
-								<p>Seguros de intereses vinculados al buque.</p>
-								<p>Seguros de intereses vinculados a los efectos.</p>
-								<p>Asesoramiento integral de otros Seguros conexos con la navegación</p>
-							</div>
-						</div>
-					</div>
-					<!-- Elemento #7 -->
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="encabezado-7">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse"
-								data-bs-target="#elemento-7" aria-expanded="true" aria-controles="elemento-7">
-								ADUANERO Y COMEX
-							</button>
-						</h2>
-
-						<div id="elemento-7" class="accordion-collapse collapse" aria-labelledby="encabezado-7"
-							data-bs-parent="#temario">
-							<div class="accordion-body">
-								<p>Defensa en procedimientos contenciosos en sede administrativa y judicial.</p>
-								<p>Repetición de tributos aduaneros.</p>
-								<p>Gestiones ante diferentes Organismos del Estado Nacional.</p>
-								<p>Asesoramiento integral de INCOTERMS.</p>
-							</div>
-						</div>
-					</div>
+					</div>				
+					
 				</div>
 			</div>
 		</div>
