--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 		</div>
 		<div class="row mt-5 justify-content-between ">
 			<div class=" mt-5 pt-5  col-12 col-6 col-lg-6 text-center ">
-				<h2 class="titulobueno1">Estudio Juridico Contable</h2>
+				<h2 class="titulobueno1">Estudio Jurídico Contable</h2>
 				<h1 class="titulobueno2  text-center">Holm. Saad & Asociados</h1>
-				<h3 class="titulobueno3">Derecho Maritimo y Comercio Exterior</h3>
+				<h3 class="titulobueno3">Derecho Marítimo y Comercio Exterior</h3>
 
 			</div>
 			<div class="contenedor-imagen  mb-4 col-12 col-lg-6 ">
@@ -110,13 +110,9 @@
 		<div id="N_NOSOTRAS" class="row  px-4 mb-1 mt-5 align-items-center ">
 			<div class=" nosotras col-12 ">				
 				<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>
-				<p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e
-					innovacion.</p>
-				<p class="resumen">Nos desafia construir un vinculo de leadtad mutua con nuestros clientes y ofrecer no
-					solo
-					un asesoramiento de calidad, sino una experiencia.</p>
-				<p class="resumen_mayor"> Nuestras Jurisdicciones:  Chubut, Rio Negro y Ciudad Autónoma de
-					Buenos Aires</p>
+				<p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovación.</p>
+				<p class="resumen">Nos desafía construir un vínculo de lealtad mutua con nuestros clientes y ofrecer no solo un asesoramiento de calidad, sino una experiencia.</p>
+				<p class="resumen_mayor">Nuestras Jurisdicciones: Chubut, Río Negro y Ciudad Autónoma de Buenos Aires.</p>
 			</div>
 		</div>
 		<!-- Portafolio my-5 mt-5 -->
@@ -141,7 +137,7 @@
 					<!-- Imagen #3 -->
 					<div class="contenedor-imagen mb-4 col-12 col-lg-8">
 						<a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
-							<img src="img/img-3.jpg" class="d-block w-100" alt="">
+							<img src="img/img-3.png" class="d-block w-100" alt="">
 						</a>
 					</div>
 
@@ -190,37 +186,33 @@
 			<div class="col-12 col-lg-4 foto text-center">
 				<img src="img/maru_mediano.jpg" class="rounded-circle mb-3" alt="">
 				<p class="nombre">Marianela Holm</p>
+				<a href="https://www.linkedin.com/in/marianela-holm-24b9b016b/" target="_blank"
+					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
 			</div>
 			<div class="col-12 col-lg-8 info">
-				<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la
-					Patagonia San Juan Bosco sede Puerto Madryn Chubut</p>
-				<p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y
-					participante del posgrado en Derecho Aduanero de la UBA.</p>
+				<p class="resumen">Mi nombre es Marianela Holm, soy abogada, recibida en la Universidad Nacional de la Patagonia San Juan Bosco, sede Puerto Madryn Chubut</p>
+				<p class="resumen">Especializada en Derecho Marítimo y Aeronáutico en la Universidad de Buenos Aires y participante del posgrado en Derecho Aduanero de la UBA.</p>
 				<p class="resumen">Miembro del Instituto Iberoamericano de Derecho Marítimo rama Argentina.</p>
-				<p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la
-					Ciudad Autónoma de Buenos Aires.</p>
-				<p class="resumen">Co- fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
+				<p class="resumen">Matriculada en la justicia Federal, en las provincias de Chubut, Rio Negro y en la Ciudad Autónoma de Buenos Aires.</p>				
+				<p class="resumen">Fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
 			</div>
 
 		</div>
 		<div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
 			<div class="col-12 col-lg-4 foto text-center ">
 				<img src="img/lucila_mediano.jpg" class="rounded-circle mb-3" alt="">
-				<p class="nombre">Lucila Saad</p>
+				<p class="nombre">Lucila Saad</p>				
+				<a href="https://www.linkedin.com/in/lucila-saad/" target="_blank"
+					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a>
 			</div>
 			<div class="col-12 col-lg-8 info">
 				<p class="resumen">Mi nombre es Lucila Saad y soy Contadora Pública egresada de la UBA.</p>
 				<p class="resumen">Vivo en la ciudad de Puerto Madryn, Chubut.</p>
-				<p class="resumen">Mi labor profesional me brindó la posibilidad de
-					desempeñarme en el Area de Administración, Finanzas
-					y RRHH en empresas multinacionales de servicios de
-					Forwarding y de adquirir una amplia experiencia en
-					materia de Comercio Exterior .</p>
-				<p class="resumen">Actualmente me desempeño asesorando a particulares y
-					empresas, ofreciendo soluciones tributarias, contables, de RRHH y de COMEX.</p>
+				<p class="resumen">Mi labor profesional me brindó la posibilidad de desempeñarme en el Área de Administración, Finanzas y RRHH en empresas multinacionales de servicios de Forwarding y de adquirir una amplia experiencia en materia de Comercio Exterior.</p>
+				<p class="resumen">Actualmente me desempeño asesorando a particulares y empresas, ofreciendo soluciones tributarias, contables, de RRHH y de COMEX.</p>
 				<p class="resumen">Co- fundadora del Estudio Jurídico Contable Holm, Saad y asociados.</p>
 				<p class="resumen">Contadora Pública.</p>
-				<p class="resumen">Docente PDS UTN .</p>
+				<p class="resumen">Docente PDS UTN.</p>
 			</div>
 		</div>
 		<div id="N_MARCA" class="row mb-5 marca">
@@ -230,11 +222,11 @@
 			<div class="col">
 				<div class="card mb-4" style="min-width:250px;">
 					<div class="card-header">
-						<h2 class="my-0 text-center">Mision</h2>
+						<h2 class="my-0 text-center">Misión</h2>
 					</div>
 					<div class="card-body text-center">
 						<ul class="my-3 list-unstyled">
-							<li>Ofrecer asesoramiento integral y personalizado de calidad</li>
+							<li>Ofrecer asesoramiento integral y personalizado de calidad.</li>
 						</ul>
 					</div>
 				</div>
@@ -246,11 +238,10 @@
 					</div>
 					<div class="card-body text-center">
 						<ul class="my-3 list-unstyled">
-							<li>Brindar soluciones legales, tributarias, contables y de Comex..</li>
+							<li>Brindar soluciones legales y contables..</li>
 							<li>Dar valor agregado a nuestros clientes, sus empresas y sus vidas.</li>
-							<li>Compartir experiencia e información útil y estratégica</li>
-							<li>Inspirar la creatividad para impulsar las ventajas competitivas de nuestros clientes,
-							</li>
+							<li>Compartir experiencia e información útil y estratégica.</li>
+							<li>Inspirar la creatividad para impulsar las ventajas competitivas de nuestros clientes.</li>
 							<li>Compartir nuestra pasión y vocación por lo que hacemos.</li>
 						</ul>
 					</div>
@@ -263,7 +254,7 @@
 					</div>
 					<div class="card-body text-center">
 						<ul class="my-3 list-unstyled">
-							<li>Autenticidad y pasión por lo que hacemos</li>
+							<li>Pasión por lo que hacemos</li>
 							<li>Compromiso, destreza e innovación</li>
 							<li>Honestidad e integridad</li>
 							<li>Trabajo en equipo</li>
@@ -285,7 +276,7 @@
 						<h2 class="accordion-header" id="encabezado-1">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse"
 								data-bs-target="#elemento-1" aria-expanded="true" aria-controles="elemento-1">
-								ASESORAMIENTO EN TRANSPORTE MARTIMO 
+								ASESORAMIENTO EN TRANSPORTE MARÍTIMO 
 							</button>
 						</h2>
 
@@ -336,7 +327,7 @@
 							</button>
 						</h2>
 
-						<div id="elemento-3" class="accordion-collapse collapse show" aria-labelledby="encabezado-3"
+						<div id="elemento-3" class="accordion-collapse collapse" aria-labelledby="encabezado-3"
 							data-bs-parent="#temario">
 							<div class="accordion-body">
 								<p>Constitución y organización de Sociedades.</p>								
@@ -493,6 +484,10 @@
 					class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava"></a></li>
 			<li class="nav-item"><a href="" target="_blank"
 					class="fa-brands fa-square-instagram fa-2x text-decoration-none text-secondary nava"></a></li>
+			<li class="nav-item"><a href="" target="_blank"
+				class=" text-decoration-none text-secondary nava"> Celular: 011-1531747443</a></li>
+				<li class="nav-item"><a href="" target="_blank"
+					class=" text-decoration-none text-secondary nava"> Celular: 0280-154262439</a></li>	
 		</ul>
 	</div>
 	<div class="col-12 col-md-6 text-center">
