--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content= "Estudio Juridico Contable en Puerto Madryn" />
+	<meta name="keywords" content="estudio , estudio juridico , puerto madryn, holm, saad"/>
+	<meta name="author" content="Estudio Holm. Saad & Asociados" />
+    <meta name="copyright" content="Estudio Holm. Saad & Asociados" />
+	<meta name="robots" content= "index, follow">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
