Se achican espacios

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<header class="container  my-5">
+	<header class="container  my-3">
 		<div class="nav row g-0 justify-content-between  rounded-top">
 			<!-- Logotipo -->
 			<div class="logo col-12 col-md-12 col-lg-4 d-flex align-items-center justify-content-center ps-4">
@@ -96,14 +96,14 @@
 				</a>
 			</nav>
 		</div>
-		<div class="row mt-5 justify-content-between ">
+		<div class="row mt-1 justify-content-between ">
 			<div class=" mt-5 pt-5  col-12 col-6 col-lg-6 text-center ">
 				<h2 class="titulobueno1">Estudio Jurídico Contable</h2>
 				<h1 class="titulobueno2  text-center">Holm. Saad & Asociados</h1>
 				<h3 class="titulobueno3">Derecho Marítimo y Comercio Exterior</h3>
 
 			</div>
-			<div class="contenedor-imagen  mb-4 col-12 col-lg-6 ">
+			<div class="contenedor-imagen col-12 col-lg-6 ">
 				<img class="d-block w-100" src="./img/Logo_vector.png" alt="...">
 			</div>
 
@@ -112,7 +112,7 @@
 	<main class="container ">
 
 		
-		<div id="N_NOSOTRAS" class="row  px-4 mb-1 mt-5 align-items-center ">
+		<div id="N_NOSOTRAS" class="row  px-4 align-items-center ">
 			<div class=" nosotras col-12 ">				
 				<p class="resumen">Somos apasionadas. Disfrutamos lo que hacemos.</p>
 				<p class="resumen">Ofrecemos soluciones profesionales con compromiso, destreza, autenticidad e innovación.</p>
@@ -121,10 +121,9 @@
 			</div>
 		</div>
 		<!-- Portafolio my-5 mt-5 -->
-		<div class="row portafolio g-0 px-4 mb-5">
-			<div class="col">
-				<h2 class="titulo text-center py-5"></h2>
-				<div class="row galeria">
+		<div class="row portafolio g-0 px-4 mb-1">
+			<div class="col">				
+				<div class="row galeria mt-3">
 					<!-- Imagen #1 -->
 					<div class="contenedor-imagen mb-4 col-6 col-lg-4">
 						<a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
@@ -187,7 +186,7 @@
 			</div>
 		</div>
 		
-		<div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
+		<div class="row acerca-de px-4 mb-3 mt-3 align-items-center ">
 			<div class="col-12 col-lg-4 foto text-center">
 				<img src="img/maru_mediano.jpg" class="rounded-circle mb-3" alt="">
 				<p class="nombre">Marianela Holm</p>
@@ -203,7 +202,7 @@
 			</div>
 
 		</div>
-		<div class="row acerca-de px-4 mb-5 mt-5 align-items-center ">
+		<div class="row acerca-de px-4 mb-3 mt-3 align-items-center ">
 			<div class="col-12 col-lg-4 foto text-center ">
 				<img src="img/lucila_mediano.jpg" class="rounded-circle mb-3" alt="">
 				<p class="nombre">Lucila Saad</p>				
@@ -220,8 +219,8 @@
 				<p class="resumen">Docente PDS UTN.</p>
 			</div>
 		</div>
-		<div id="N_MARCA" class="row mb-5 marca">
-			<div class="col-12 mb-5 mt-5">
+		<div id="N_MARCA" class="row mb-3 marca">
+			<div class="col-12 mb-3 mt-3">
 				<h1 class="text-center">Nuestra Marca</h1>
 			</div>
 			<div class="col">
@@ -239,7 +238,7 @@
 			<div class="col">
 				<div class="card mb-4" style="min-width:250px;">
 					<div class="card-header">
-						<h2 class="my-0 text-center">Vision</h2>
+						<h2 class="my-0 text-center">Visión</h2>
 					</div>
 					<div class="card-body text-center">
 						<ul class="my-3 list-unstyled">
@@ -270,8 +269,8 @@
 			</div>
 		</div>
 		<!-- ESERVICIOS-->
-		<div id="N_SERVICIOS" class="row mb-5 servicio">
-			<div class="col-12 mb-5 mt-5">
+		<div id="N_SERVICIOS" class="row mb-3 servicio">
+			<div class="col-12 mb-3 mt-3">
 				<h1 class="text-center">Nuestros Servicios</h1>
 			</div>
 			<div class="col-12">
