Se agrega cambio de logo

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<h3 class="titulobueno3">Derecho Marítimo y Comercio Exterior</h3>
 
 			</div>
-			<div class="contenedor-imagen col-12 col-lg-6 ">
+			<div class="col-12 col-lg-6">
 				<img class="d-block w-100" src="./img/Logo_vector.png" alt="...">
 			</div>
 
